hphp/hack/test/typecheck/declare_statement.php
<?hh // strict

function foo(): void {
  declare (ticks = 1);
}
